# MarketZone

./: .gitignore  CMakeLists.txt  Directory.Build.targets  MarketZone.slnx  PROJECT_SUMMARY.md  README.md
mzConfig/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  ColorPickerPage.xaml  ColorPickerPage.xaml.cs  DEBUGGING_DISPLAY_ISSUES.md  DIAGNOSTICS_TROUBLESHOOTING.md  FEATURE_ADD_SPECIAL.md  FEATURE_ORIENTATION.md  FEATURE_UNIFIED_ADD_DIALOG.md  FEATURE_VISUAL_COLOR_PICKER.md  HOTSPOT_CONNECTION.md  MainPage.xaml  MainPage.xaml.cs  MainPage_temp.xaml  MauiProgram.cs  NETWORK_DIAGNOSTICS.md  QUICKSTART.md  README.md  mzConfig.csproj
mzConfig/Models/: SelectableSpecial.cs  Special.cs
mzConfig/Services/: ApiAuthService.cs  DialogService.cs  INetworkDiagnosticsService.cs  IWiFiService.cs  LOG_README.md  Log.cs  NetworkDiagnosticsService.cs  ServiceHealthMonitor.cs  SpecialsApiService.cs  SpecialsLibraryService.cs  WiFiService.cs
mzConfig/ViewModels/: AboutViewModel.cs  ColorPickerViewModel.cs  MainViewModel.cs  SettingsViewModel.cs
mzConfig/Views/: AboutPage.xaml  AboutPage.xaml.cs  AddSpecialDialog.xaml  AddSpecialDialog.xaml.cs  ColorPickerDialog.xaml  ColorPickerDialog.xaml.cs  LibrarySelectionPage.xaml  LibrarySelectionPage.xaml.cs
mzSpecials/: .gitignore  CMakeLists.txt
mzSpecials/cmake/: UpdateVersion.cmake
mzSpecials/src/: main.cpp
mzWheeler/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  BUILD_NOTES.md  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  README.md  WINDOWS_TESTING.md  mzWheeler.csproj
mzWheeler/Controls/: CircularGauge.cs  CompassGauge.cs  CompassGaugeView.cs  TiltSphere.cs  TiltSphereView.cs
mzWheeler/Converters/: InvertedBoolConverter.cs  ProgressConverter.cs  ValueToAngleConverter.cs
mzWheeler/Models/: LocationData.cs  TiltData.cs  VehicleData.cs
mzWheeler/Services/: LocationService.cs  MockDataService.cs  ObdBluetoothService.cs  TiltService.cs
mzWheeler/ViewModels/: ConditionsViewModel.cs  DashboardViewModel.cs
mzWheeler/Views/: ConditionsPageSimple.xaml  ConditionsPageSimple.xaml.cs  DashboardPageSimple.xaml  DashboardPageSimple.xaml.cs
scripts/: start-mzspecials.sh
src/: main.cpp
